--- a/index.html
+++ b/index.html
@@ -1,7 +1,38 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Your GitHub Page Title</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<header>
+  <h1>Welcome to My GitHub Page</h1>
+</header>
+
+<nav>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Projects</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+</nav>
+
+<main>
+  <section>
+    <h2>About Me</h2>
+    <p>This is a brief introduction about me...</p>
+  </section>
+
+  <section>
+    <h2>My Projects</h2>
+    <p>Here are some projects I've worked on...</p>
+  </section>
+</main>
+
+<footer>
+  <p>&copy; 2023 Your Name. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
