--- a/index.html
+++ b/index.html
@@ -2,36 +2,47 @@
 <html>
 <head>
   <title>Your GitHub Page Title</title>
+  <style>
+    body {
+      background-color: #f2f2f2; /* Grey background */
+      font-family: "Calibri", sans-serif; /* Calibri font */
+      text-align: center; /* Center align text */
+    }
+    header {
+      margin-top: 50px; /* Add some top margin */
+    }
+    h1 {
+      margin: 0; /* Remove default margin */
+    }
+    .separator {
+      width: 100px;
+      height: 2px;
+      background-color: #333; /* Dark separator line */
+      margin: 10px auto; /* Center the line */
+    }
+    .description {
+      font-style: italic; /* Italic text */
+      margin: 20px 0; /* Add margin */
+    }
+    .position-description {
+      margin: 30px 0;
+    }
+  </style>
 </head>
 <body>
 
 <header>
-  <h1>Welcome to My GitHub Page</h1>
+  <h1>Steffen Weinmann</h1>
+  <div class="separator"></div>
+  <p class="description">"Aspiring PhD student for the establishment of solid-state batteries at the Technical University of Munich. Paving the way to become a leading expert in ceramics processing and start an academic career"</p>
 </header>
 
-<nav>
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Projects</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-</nav>
-
 <main>
-  <section>
-    <h2>About Me</h2>
-    <p>This is a brief introduction about me...</p>
-  </section>
-
-  <section>
-    <h2>My Projects</h2>
-    <p>Here are some projects I've worked on...</p>
-  </section>
+  <p class="position-description">PhD candidate researching solid state batteries at Technical University Munich in Munich at Prof. Dr. Jennifer L.M. Rupp's Group at the <a href="https://ecm-tum.de/">chair for chemistry of solid-state electrolytes</a>.</p>
 </main>
 
 <footer>
-  <p>&copy; 2023 Your Name. All rights reserved.</p>
+  <p>&copy; 2023 Steffen Weinmann. All rights reserved.</p>
 </footer>
 
 </body>
