--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@
   <title>Your GitHub Page Title</title>
   <style>
     body {
-      background-color: #f2f2f2; /* Grey background */
-      font-family: "Calibri", sans-serif; /* Calibri font */
-      text-align: center; /* Center align text */
+      background-image: url('paper-texture.jpg'); /* Replace with your paper texture image's filename */
+      background-color: #f2f2f2; /* Fallback color */
+      font-family: "Calibri", sans-serif;
+      text-align: center;
+      background-size: cover; /* Adjust to cover the whole background */
     }
     header {
-      margin-top: 50px; /* Add some top margin */
+      margin-top: 50px;
     }
     h1 {
-      margin: 0; /* Remove default margin */
+      margin: 0;
     }
     .separator {
       width: 100px;
       height: 2px;
-      background-color: #333; /* Dark separator line */
-      margin: 10px auto; /* Center the line */
+      background-color: #333;
+      margin: 10px auto;
     }
     .description {
-      font-style: italic; /* Italic text */
-      margin: 20px 0; /* Add margin */
+      font-style: italic;
+      margin: 20px 0;
     }
     .position-description {
       margin: 30px 0;
