--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
       background-color: #f7f7f0;
       font-family: "Calibri", sans-serif;
       text-align: center;
-      margin: 0; /* Reset default margin */
-      padding: 0; /* Reset default padding */
+      margin: 0;
+      padding: 0;
     }
     .container {
-      max-width: 800px; /* Adjust the width as needed */
-      margin: 0 auto; /* Center the container horizontally */
-      padding: 20px; /* Add some padding */
-      box-sizing: border-box; /* Include padding in total width */
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      box-sizing: border-box;
     }
     header {
       margin-top: 50px;
@@ -22,11 +22,14 @@
     h1 {
       margin: 0;
     }
-    .separator {
-      width: 100px;
+    .long-dash {
+      width: 150px; /* Adjust the width as needed */
       height: 2px;
       background-color: #333;
       margin: 10px auto;
+    }
+    .sub-heading {
+      font-size: 1.2em; /* Adjust the font size as needed */
     }
     .description {
       font-style: italic;
@@ -42,7 +45,8 @@
 <div class="container">
   <header>
     <h1>Steffen Weinmann</h1>
-    <div class="separator"></div>
+    <div class="long-dash"></div>
+    <h2 class="sub-heading">PhD student, Investor, Sports</h2>
     <p class="description">"Aspiring PhD student for the establishment of solid-state batteries at the Technical University of Munich. Paving the way to become a leading expert in ceramics processing and start an academic career"</p>
   </header>
 
