--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       margin: 0;
     }
     .long-dash {
-      width: 150px; /* Adjust the width as needed */
+      width: 150px;
       height: 2px;
       background-color: #333;
       margin: 10px auto;
     }
     .sub-heading {
-      font-size: 1.2em; /* Adjust the font size as needed */
+      font-size: 1.2em;
     }
     .description {
       font-style: italic;
@@ -37,6 +37,10 @@
     }
     .position-description {
       margin: 30px 0;
+    }
+    .link {
+      color: inherit; /* Inherit text color from parent */
+      text-decoration: none; /* Remove underline */
     }
   </style>
 </head>
@@ -51,7 +55,7 @@
   </header>
 
   <main>
-    <p class="position-description">PhD candidate researching solid state batteries at Technical University Munich in Munich at Prof. Dr. Jennifer L.M. Rupp's Group at the <a href="https://ecm-tum.de/">chair for chemistry of solid-state electrolytes</a>.</p>
+    <p class="position-description">PhD candidate researching solid state batteries at Technical University Munich in Munich at Prof. Dr. Jennifer L.M. Rupp's Group at the <a class="link" href="https://ecm-tum.de/">chair for chemistry of solid-state electrolytes</a>.</p>
   </main>
 
   <footer>
