--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       margin: 30px 0;
     }
     .link {
-      color: inherit; /* Inherit text color from parent */
-      text-decoration: none; /* Remove underline */
+      color: inherit;
+      text-decoration: none;
     }
   </style>
 </head>
@@ -55,7 +55,15 @@
   </header>
 
   <main>
-    <p class="position-description">PhD candidate researching solid state batteries at Technical University Munich in Munich at Prof. Dr. Jennifer L.M. Rupp's Group at the <a class="link" href="https://ecm-tum.de/">chair for chemistry of solid-state electrolytes</a>.</p>
+    <p class="position-description">
+      PhD candidate researching solid state batteries at Technical University Munich in Munich at Prof. Dr. Jennifer L.M. Rupp's Group at the <a class="link" href="https://ecm-tum.de/">chair for chemistry of solid-state electrolytes</a>.
+      <br>
+      M.Sc. in Micro- and Nanotechnology through the "Applied Research in Engineering Sciences" program from the University of Applied Sciences in Munich in 2022.
+      <br>
+      B.Sc. in Process- and Environmental Engineering from the University of Applied Sciences in Heilbronn 2019.
+      <br>
+      I love physical fitness and nutrition, adding books to my collection, and investing in valuable assets.
+    </p>
   </main>
 
   <footer>
