--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
       <br>
       I love physical fitness and nutrition, adding books to my collection, and investing in valuable assets.
     </p>
+    
+    <!-- Add QR code image -->
+    <img src="Pictures/QR-Code.png" alt="QR Code">
   </main>
 
   <footer>
