--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </p>
     
     <!-- Add QR code image -->
-    <img src="Pictures/QR-Code.png" alt="QR Code">
+    <img src="C:\Users\ge85vin\Documents\GitHub\SteffenWeinmann.github.io\Pictures/QR-Code.png" alt="QR Code">
   </main>
 
   <footer>
