--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       I love physical fitness and nutrition, adding books to my collection, and investing in valuable assets.
     </p>
     
-    <!-- Add QR code image -->
-    <img src="C:\Users\ge85vin\Documents\GitHub\SteffenWeinmann.github.io\Pictures/QR-Code.png" alt="QR Code">
+    <!-- Add QR code image with correct relative path -->
+    <img src="Pictures/QR-Code.png" alt="QR Code">
   </main>
 
   <footer>
