--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </p>
     
     <!-- Add QR code image with correct relative path -->
-    <img src="Pictures/QR-Code.png" alt="QR Code">
+    <img src="Pictures/QR-Code.png" alt="QR Codeee">
   </main>
 
   <footer>
