--- a/index.html
+++ b/index.html
@@ -3,56 +3,17 @@
 <head>
   <title>Your GitHub Page Title</title>
   <style>
-    body {
-      background-color: #f7f7f0;
-      font-family: "Calibri", sans-serif;
-      text-align: center;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-      box-sizing: border-box;
-    }
-    header {
-      margin-top: 100px;
-    }
-    h1 {
-      margin: 0;
-    }
-    .long-dash {
-      width: 250px;
-      height: 3px;
-      background-color: #333;
-      margin: 10px auto;
-    }
-    .sub-heading {
-      font-size: 1.2em;
-    }
-    .description {
-      font-style: italic;
-      margin: 20px 0;
-    }
-    .position-description {
-      margin: 30px 0;
-    }
-    .link {
-      color: inherit;
-      text-decoration: none;
-    }
+    /* Your existing styles here */
+    /* ... */
   </style>
+  <!-- Add a link to FontAwesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
 <div class="container">
-  <header>
-    <h1>Steffen Weinmann</h1>
-    <div class="long-dash"></div>
-    <h2 class="sub-heading">PhD student, Investor, Sports</h2>
-    <p class="description">"Aspiring PhD student for the establishment of solid-state batteries at the Technical University of Munich. Paving the way to become a leading expert in ceramics processing and start an academic career"</p>
-  </header>
+  <!-- Your existing content here -->
+  <!-- ... -->
 
   <main>
     <p class="position-description">
@@ -64,14 +25,18 @@
       <br>
       I love physical fitness and nutrition, adding books to my collection, and investing in valuable assets.
     </p>
-    
-    <!-- Add QR code image with correct relative path -->
-    <img src="QR-Code.png" alt="QR Code">
+
+    <!-- Contact Information -->
+    <div class="contact-info">
+      <p><i class="fas fa-graduation-cap"></i> Chemistry, Technical University Munich</p>
+      <p><i class="fas fa-map-marker-alt"></i> Munich, Germany</p>
+      <p><i class="fas fa-phone"></i> +49 162 8825544</p>
+      <p><i class="fas fa-envelope"></i> <a href="mailto:weinmann.steffen@googlemail.com">weinmann.steffen@googlemail.com</a></p>
+    </div>
   </main>
 
-  <footer>
-    <p>&copy; 2023 Steffen Weinmann. All rights reserved.</p>
-  </footer>
+  <!-- Your existing footer here -->
+  <!-- ... -->
 </div>
 
 </body>
