--- a/index.html
+++ b/index.html
@@ -3,8 +3,53 @@
 <head>
   <title>Your GitHub Page Title</title>
   <style>
-    /* Your existing styles here */
-    /* ... */
+    body {
+      background-color: #f7f7f0;
+      font-family: "Calibri", sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+    header {
+      margin-top: 100px;
+    }
+    h1 {
+      margin: 0;
+    }
+    .long-dash {
+      width: 250px;
+      height: 3px;
+      background-color: #333;
+      margin: 10px auto;
+    }
+    .sub-heading {
+      font-size: 1.2em;
+    }
+    .description {
+      font-style: italic;
+      margin: 20px 0;
+    }
+    .position-description {
+      margin: 30px 0;
+    }
+    .link {
+      color: inherit;
+      text-decoration: none;
+    }
+    /* Additional styling for contact info */
+    .contact-info {
+      text-align: left;
+      margin-top: 30px;
+    }
+    .contact-info p {
+      margin: 10px 0;
+    }
   </style>
   <!-- Add a link to FontAwesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -12,8 +57,12 @@
 <body>
 
 <div class="container">
-  <!-- Your existing content here -->
-  <!-- ... -->
+  <header>
+    <h1>Steffen Weinmann</h1>
+    <div class="long-dash"></div>
+    <h2 class="sub-heading">PhD student, Investor, Sports</h2>
+    <p class="description">"Aspiring PhD student for the establishment of solid-state batteries at the Technical University of Munich. Paving the way to become a leading expert in ceramics processing and start an academic career"</p>
+  </header>
 
   <main>
     <p class="position-description">
@@ -35,8 +84,9 @@
     </div>
   </main>
 
-  <!-- Your existing footer here -->
-  <!-- ... -->
+  <footer>
+    <p>&copy; 2023 Steffen Weinmann. All rights reserved.</p>
+  </footer>
 </div>
 
 </body>
